# plebscan

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  render.yaml
flask-ui/: app.py  requirements.txt
flask-ui/static/: mock_wallets_backup.json  mock_wallets_backup_2.json
flask-ui/static/css/: custom.css
flask-ui/templates/: base.html  dashboard.html  index.html  info.html
src/: main.rs
