[package]
name = "pleb_scan"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bitcoin = "0.31"
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["json"] }
secp256k1 = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
regex = "1"
once_cell = "1"
